3876.	[bug]		Improve efficiency of DLZ redirect zones by
			suppressing unnecessary database lookups. [RT #35835]

3875.	[cleanup]	Clarify log message when unable to read private
			key files. [RT #24702]

3874.	[test]		Check that only "check-names master" is needed for
			updates to be accepted.

3873.	[protocol]	Only warn for SPF without TXT spf record. [RT #36210]

3872.	[bug]		Address issues found by static analysis. [RT #36209]

3871.	[bug]		Don't publish an activated key automatically before
			its publish time. [RT #35063]

3870.	[func]		Updated the random number generator used in
			the resolver to use the updated ChaCha based one
			(similar to OpenBSD's changes). Also moved the
			RNG to libisc and added unit tests for it.
			[RT #35942]

3869.	[doc]		Document that in-view zones cannot be used for
			response policy zones. [RT #35941]

3868.	[bug]		isc_mem_setwater incorrectly cleared hi_called
			potentially leaving over memory cleaner running.
			[RT #35270]

3867.	[func]		"rndc nta" can now be used to set a temporary
			negative trust anchor, which disables DNSSEC
			validation below a specified name for a specified
			period of time (not exceeding 24 hours).  This
			can be used when validation for a domain is known
			to be failing due to a configuration error on
			the part of the domain owner rather than a
			spoofing attack. [RT #29358]

3866.	[bug]		Named could die on disk full in generate_session_key.
			[RT #36119]

3865.	[test]		Improved testability of the red-black tree
			implementation and added unit tests. [RT #35904]

3864.	[bug]		RPZ didn't work well when being used as forwarder.
			[RT #36060]

3863.	[bug]		The "E" flag was missing from the query log as a
			unintended side effect of code rearrangement to
			support EDNS EXPIRE. [RT #36117]

3862.	[cleanup]	Return immediately if we are not going to log the
			message in ns_client_dumpmessage.

3861.	[security]	Missing isc_buffer_availablelength check results