@@ -32,7 +32,9 @@ options {
 	session-keyfile "session.key";
 	listen-on { 10.53.0.5; };
 	listen-on-v6 { none; };
-	notify no;
+	ixfr-from-differences yes;
+	notify-delay 1;
+	notify yes;
 
 	# turn rpz on or off
 	include "rpz-switch";
@@ -73,3 +75,11 @@ zone "bl16."		{type master; file "bl.db"; };
 zone "bl17."		{type master; file "bl.db"; };
 zone "bl18."		{type master; file "bl.db"; };
 zone "bl19."		{type master; file "bl.db"; };
+
+zone "policy1" {
+	type master;
+	file "empty.db";
+	also-notify { 10.53.0.6; };
+	allow-update { any; };
+	allow-transfer { any; };
+};
