@@ -24,9 +24,10 @@ options {
 	session-keyfile "session.key";
 	listen-on { 10.53.0.6; };
 	listen-on-v6 { none; };
-	notify no;
 	forward only;
 	forwarders { 10.53.0.3; };
+
+        response-policy { zone "policy1"; };
 };
 
 key rndc_key {
@@ -39,3 +40,10 @@ controls {
 };
 
 include "../trusted.conf";
+
+zone "policy1" {
+	type slave;
+	masters { 10.53.0.5; };
+	file "empty.db";
+	allow-transfer  { any; };
+};
